# Data_Analis

./: README.md
curs_project_1/: README.md  pyproject.toml
curs_project_1/curs_project_1/: funk_sorter.py  funk_split_file.py  sort_name_date.py
